fixed filter on mobile not breaking rows

--- a/src/app/grid/grid-controller/grid-controller.component.scss
+++ b/src/app/grid/grid-controller/grid-controller.component.scss
@@ -55,6 +55,23 @@
   }
 }
 
+@media screen and (max-width: 720px) {
+  .grid-controller {
+    flex-direction: column;
+    width: 100%;
+
+    .mat-form-field, app-checkbox, input {
+      width: 100%;
+      margin: 6px 0 12px 0;
+    }
+
+    app-checkbox .inacitve-hider {
+      width: 100%;
+    }
+  }
+
+}
+
 @media (prefers-color-scheme: dark) {
   .mat-form-field-flex {
     background: #21262d;
